--- a/TeamCode/src/main/res/xml/studiorobot.xml
+++ b/TeamCode/src/main/res/xml/studiorobot.xml
@@ -4,8 +4,8 @@
     <LynxUsbDevice name="Control Hub Portal" serialNumber="(embedded)" parentModuleAddress="173">
         <LynxModule name="Expansion Hub 2" port="2">
             <RevRobotics20HDHexMotor name="lift" port="1" />
-            <RevRoboticsCoreHexMotor name="4bar" port="0" />
             <Servo name="claw" port="1" />
+            <Servo name="4bar" port="0" />
         </LynxModule>
         <LynxModule name="Control Hub" port="173">
             <RevRobotics20HDHexMotor name="bl" port="0" />
