--- a/TeamCode/src/main/res/xml/studiorobot.xml
+++ b/TeamCode/src/main/res/xml/studiorobot.xml
@@ -5,7 +5,7 @@
         <LynxModule name="Expansion Hub 2" port="2">
             <RevRobotics20HDHexMotor name="lift" port="1" />
             <Servo name="claw" port="1" />
-            <Servo name="4bar" port="0" />
+            <RevRoboticsCoreHexMotor name="4bar" port="0" />
         </LynxModule>
         <LynxModule name="Control Hub" port="173">
             <RevRobotics20HDHexMotor name="bl" port="0" />
